--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -29,12 +29,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:src="@drawable/image_not_made"/>
+            android:src="@drawable/ic_argentina"/>
 
         <LinearLayout
             android:id="@+id/llProgressDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -71,8 +71,7 @@
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#7A8089"
-            android:textSize="18sp"
-            tools:text="Option"/>
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/tvOptionTwo"
@@ -83,8 +82,7 @@
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#7A8089"
-            android:textSize="18sp"
-            tools:text="Option"/>
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/tvOptionThree"
@@ -95,8 +93,7 @@
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#7A8089"
-            android:textSize="18sp"
-            tools:text="Option"/>
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/tvOptionFour"
@@ -107,8 +104,7 @@
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#7A8089"
-            android:textSize="18sp"
-            tools:text="Option"/>
+            android:textSize="18sp"/>
 
         <Button
             android:id="@+id/btnSubmit"
@@ -116,6 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:padding="15dp"
+            android:text="SUBMIT"
             android:textSize="24sp"
             android:textColor="@color/white"
             android:background="@color/design_default_color_primary"/>
