--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
     android:layout_gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/ic_bg_dark">
 
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:src="@drawable/trophy"/>
 
     <TextView
         android:id="@+id/tvName"
@@ -21,8 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:gravity="center"
-        android:textColor="#0e0e0e"
-        android:textSize="24sp"
+        android:textColor="@color/dark_blue"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:text="Congratulations!"/>
 
@@ -32,8 +34,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="#0e0e0e"
-        android:textSize="16sp"
+        android:textColor="@color/dark_blue"
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:text="Your score is 9/10"/>
 
     <Button
@@ -43,7 +46,7 @@
         android:layout_margin="15dp"
         android:text="FINISH"
         android:textSize="18sp"
-        android:textColor="@color/white"
-        android:background="@color/design_default_color_primary"/>
+        android:textColor="@color/sky_blue"
+        android:backgroundTint="@color/blue"/>
 </LinearLayout>
 
