--- a/app/src/main/res/drawable/selected_option_bg.xml
+++ b/app/src/main/res/drawable/selected_option_bg.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/design_default_color_primary"/>
+        android:color="@color/green"/>
     <solid android:color="@color/white"/>
     <corners android:radius="5dp"/>
 </shape>
